fixed responsive layout for contact page and z-indexing

--- a/contactResponsive.css
+++ b/contactResponsive.css
@@ -5,10 +5,10 @@
     background-position: left;
   }
   .container-fluid {
-    z-index: 0;
+    z-index: -1;
   }
   .test3 {
-    z-index: 1;
+    z-index: 2;
   }
   .contact-me {
     margin-left: 14px;
